# slyng

./: .gitignore  README.md  deno.json  import_map.json  package.json
apps/nexus/: deno.json  main.ts
apps/slyng/: deno.json  package.json  svelte.config.js  svelte.config.mjs  tailwind.config.js  vite.config.js
apps/slyng/src/: app.html
apps/slyng/src-tauri/: Cargo.toml  tauri.conf.json
apps/slyng/src-tauri/capabilities/: default.json
apps/slyng/src-tauri/src/: main.rs
apps/slyng/src/lib/global/: index.ts  themes.ts
apps/slyng/src/lib/svelte/: device-info.svelte  state.svelte.ts  store.svelte.ts
apps/slyng/src/routes/: +layout.svelte  +page.svelte
apps/slyng/src/routes/create-identity/: +page.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
