[package]
name = "persona"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libp2p = { version = "0.53.2", features = ["tcp", "tls", "dns", "async-std", "noise", "yamux", "websocket", "ping", "macros", "tokio"] }
futures = "0.3.21"
async-std = { version = "1.12.0", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.36.0", features = ["full"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
